--- a/frontend/Quiz/quiz.html
+++ b/frontend/Quiz/quiz.html
@@ -59,7 +59,10 @@
 
     <div class="container">
         <main>
-            <h1 class="text-center my-4">Can you spot the phishing scams?</h1>
+            <h1 class="mt-5" style="font-family: Arial, sans-serif; font-size: 2.5rem; line-height: 1.6;">
+                Can You Spot The Phishing Scams?
+            </h1>
+            
 
             <div class="quiz-section">
                 <div class="d-flex justify-content-between align-items-center mb-3">
@@ -70,11 +73,11 @@
                     what to look for, you can protect yourself from falling victim to these scams.</p>
 
                     <ul>
-                        <li>Check the sender's email address: Look for misspellings or suspicious domains.</li>
-                        <li>Be wary of urgent or threatening language: Scammers often create a false sense of urgency.</li>
-                        <li>Hover over links before clicking: Verify that the URL matches the legitimate website.</li>
-                        <li>Look for generic greetings: Phishing emails often use "Dear Sir/Madam" instead of your name.</li>
-                        <li>Be cautious of requests for sensitive information: Legitimate organisations rarely ask for personal data via email.</li>
+                        <li>Check the sender's email address - Look for misspellings or suspicious domains.</li>
+                        <li>Be wary of urgent or threatening language - Scammers often create a false sense of urgency.</li>
+                        <li>Hover over links before clicking - Verify that the URL matches the legitimate website.</li>
+                        <li>Look for generic greetings - Phishing emails often use "Dear Sir/Madam" instead of your name.</li>
+                        <li>Be cautious of requests for sensitive information - Legitimate organisations rarely ask for personal data via email.</li>
                     </ul>
                 <p><b>Test your knowledge:</b></p>
 
