--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -77,7 +77,6 @@
                     increasing awareness, enhancing digital literacy, and implementing
                     stronger safeguards, we can help protect our elderly from falling victim
                     to these ruthless crimes.
-                    <br /><br />
                     Discover how scams are increasingly targeting Australians aged 65 and
                     over.
                     <div class="title">Scroll to Start</div>
@@ -168,7 +167,11 @@
                         As awareness about scams grows, so too does the number of reported
                         incidents. The data likely represents just the tip of the iceberg,
                         as many seniors may not report scams due to shame, embarrassment, or
-                        simply not realizing they've been scammed.
+                        simply not realizing they've been scammed. 
+                        <br></br>
+                        If you have recently encountered a scam, 
+                        please submit a <a href="../frontend/scamReport/index.html/">report</a> with us 
+                        and join the fight against scammers. 
                     </section>
                 </div>
                 <div id="vis">
