--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -34,8 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../frontend/index.html"
-                >Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../frontend/index.html">Home</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Trending Scams</a>
@@ -159,7 +158,7 @@
                         simply not realizing they've been scammed. 
                         <br></br>
                         If you have recently encountered a scam, 
-                        please submit a <a href="../frontend/scamReport/index.html/">report</a> with us 
+                        please submit a <a href="../frontend/scamReport/index.html">report</a> with us
                         and join the fight against scammers. 
                     </section>
                 </div>
@@ -176,7 +175,7 @@
           <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li style="padding: 50px;" class="d-inline"><a href="#">Home</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="../frontend/index.html">Home</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../frontend/scamReport/index.html">Report Phishing Scam</a></li>
