remove extra space

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -14,7 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <!-- Replaced Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -39,7 +39,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Trending Scams</a>
             </li>
-            <li class="nav-item"></li>
+            <li class="nav-item">
               <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
             </li>
             <li class="nav-item">
@@ -175,12 +175,22 @@
           <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li style="padding: 50px;" class="d-inline"><a href="../frontend/index.html">Home</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="../frontend/scamReport/index.html">Report Phishing Scam</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
-          </ul>        
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../frontend/index.html">Home</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../scrollytelly/data.html">Trending Scams</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../frontend/scamReport/index.html">Report Phishing Scam</a>
+              </li>
+              <li style="padding: 50px;" class="d-inline">
+                <a href="../frontend/Quiz/quiz.html">Test Your Knowledge</a>
+              </li>
+            </ul>        
         </div>
         <hr />
         <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
