--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -67,7 +67,7 @@
                     to these ruthless crimes.
                     Discover how scams are increasingly targeting Australians aged 65 and
                     over.
-                    <div class="title">Scroll to Start</div>
+                    Scroll to Start
                 </p>
             </div>
         </section>
@@ -165,7 +165,6 @@
                 <div id="vis">
                     <!-- The visualization will be rendered here by D3.js -->
                 </div>
-                <div id="extra-space"></div>
             </div>
         </div>
     </main>
