--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
     <div class="container">
       <h1 class="intro-title">Protect Yourself from Scams </br> Know the Warning Signs<br></h1>
       <p class="intro-body">
-        We’re here to help you in recognise common scams targeting senior Australians and how to stay safe online.
+        We’re here to help you recognise common phishing scams targeting senior Australians and how to stay safe online.
       </p>
       <a class="btn-blue" href="../scrollytelly/data.html" role="button">Explore how senior Australians are being targetted</a>
     </div>
@@ -174,7 +174,7 @@
 
   <!-- Check out Section -->
   <section class="what-to-do-section text-center">
-    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank">Spot the red flags: unsolicited offers, requests for money, and unfamiliar phone numbers.</a></h3>
+    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank">Visit Scam Watch, Australia's first line of defence against phishing scams.</a></h3>
   </section>
 
   <!-- Footer -->
