--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -40,9 +40,9 @@
     <main>
       <section class="description">
         <p>If you've encountered a suspicious email, website, or message that you believe might be a 
-          phishing scam, we encourage you to report it using the form below. By sharing the details of 
+          phishing scam, we encourage you to report it using the trusted form below. By sharing the details of 
           the scam, you help us in our mission to protect others from falling victim to similar attacks. 
-          Your report will be included in our <a href="../../scrollytelly/data.html">Trending Scams </a>
+          Your report will be included in our secure <a href="../../scrollytelly/data.html">Trending Scams </a>
           report. Please ensure you provide as much 
           detail as possible to help others stay safe.</p>
       </section>
@@ -161,7 +161,7 @@
 
         <div class="form-group">
           <input type="checkbox" id="consent" name="consent" required="">
-          <label for="consent">I confirm that the information provided is true and does not contain personal information. 
+          <label for="consent">I confirm that the information provided is true and does not contain sensitive information. 
             I consent to the storage and processing of the submitted details for the purpose of phishing 
             scam investigation and prevention. I understand that the information will be used solely for 
             improving phishing detection and response efforts and will be displayed on the <a href="../../scrollytelly/data.html">Trending Scams </a>
