--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item"></li>
-              <a class="nav-link active" href="#">Fraud Email Detection</a>
+              <a class="nav-link active" href="#">Detect Phishing Scams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../../frontend/scamReport/index.html">Report Phishing Scam</a>
@@ -146,7 +146,7 @@
             <ul class="list-unstyled">
               <li style="padding: 50px;" class="d-inline"><a href="../../frontend/index.html">Home</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../../scrollytelly/data.html">Trending Scams</a></li>
-              <li style="padding: 50px;" class="d-inline"><a href="email_detection.html">Fraud Email Detection</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="email_detection.html">Detect Phishing Scams</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../../frontend/scamReport/index.html">Report Phishing Scam</a></li>
               <li style="padding: 50px;" class="d-inline"><a href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
           </ul>        
