--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
                   </li>
                   <li class="nav-item"></li>
-                    <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+                    <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
@@ -139,7 +139,7 @@
                 <ul class="list-unstyled">
                   <li style="padding: 50px;" class="d-inline"><a href="#">Home</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
-                  <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+                  <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
               </ul>        
