Changed nav bar

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Trending Scams</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../frontend/scamReport/index.html">Report Phishing Scam</a>
@@ -181,7 +181,7 @@
                 <a href="../scrollytelly/data.html">Trending Scams</a>
               </li>
               <li style="padding: 50px;" class="d-inline">
-                <a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+                <a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
               </li>
               <li style="padding: 50px;" class="d-inline">
                 <a href="../frontend/scamReport/index.html">Report Phishing Scam</a>
