--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -129,11 +129,12 @@
       <h3><strong>Think You've Been Scammed? Here's What to Do.</strong></h3>
       <ul>
         <li><strong>Stay calm and act fast.</strong> If you suspect you've been scammed, it's important to act quickly to minimize damage.</li>
-        <li><strong>Stop any communication</strong>Stop any communication with the scammer.</li>
+        <li><strong>Stop any communication</strong> with the scammer.</li>
         <li><strong>Change your passwords</strong> for any online accounts that might be affected, especially banking or financial accounts.</li>
         <li><strong>Contact your bank or financial institution</strong> to report the scam and freeze or monitor your accounts.</li>
-        <li><strong>Report the scam</strong> to the appropriate authorities (e.g., Scamwatch, your local consumer protection agency, police, or SeniorSafe)</li>
-        <li>Consider contacting a cybersecurity expert or your financial institution for further support.</li>
+        <li><strong>Report the scam</strong> to the appropriate authorities (e.g., Scamwatch, your local consumer protection agency or police)</li>
+        <li><strong>Consider contacting</strong> a cybersecurity expert or your financial institution for further support.</li>
+        <li><strong>Help others stay safe</strong> online and <a href="../../frontend/scamReport/index.html">report</a> your scam on SeniorSafe. </li>
         <li>Lastly, visit our <a href="../../frontend/businessEmailCompromisePhishing.html">Phishing Scam Resources</a> page to learn about different types of phishing scams so you can identify and avoid them in the future.</li>
       </ul>
   </section>
