--- a/frontend/caution.html
+++ b/frontend/caution.html
@@ -115,7 +115,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo" />Senior Safe
+          <img
+            src="resources/logof.jpg"
+            alt="Senior Safe Logo"
+            class="logo"
+          />Senior Safe
         </a>
         <button
           class="navbar-toggler"
@@ -130,36 +134,30 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              <a class="nav-link" href="scamReport/index.html">Report Phishing Scam</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Discover
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                  <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                  <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                  <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                  <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                  <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                  <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-                </div>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
+  
 
     <!-- Main Content Section -->
     <div class="content-container">
@@ -197,31 +195,22 @@
     <!-- Footer -->
     <footer class="footer bg-light text-center">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>Contact Us</h5>
-            <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-          </div>
-          <div class="col-md-4">
-            <h5>Follow Us</h5>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="col-md-4">
+          <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
-              <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
-              <li><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
-            </ul>
-          </div>
+              <li style="padding: 50px;" class="d-inline"><a href="#">Home</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="Quiz/quiz.html">Test Your Knowledge</a></li>
+          </ul>        
         </div>
         <hr />
         <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
       </div>
     </footer>
+    <a href="javascript:void(0);" class="down-arrow" onclick="scrollDown();">
+      <i class="fas fa-chevron-down"></i>
+    </a>
   </body>
 </html>
