the up arrow added on home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,9 @@
       </div>
     </div>
   </nav>
+  <a href="javascript:void(0);" class="up-arrow" onclick="scrollUp();">
+    <i class="fas fa-chevron-up"></i>
+</a>
 
   <!-- Landing Section -->
   <section class="landing-section text-center">
@@ -194,6 +197,7 @@
       <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
     </div>
   </footer>
+ 
   <a href="javascript:void(0);" class="down-arrow" onclick="scrollDown();">
     <i class="fas fa-chevron-down"></i>
   </a>
