Improved description on scam detection page

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -76,11 +76,11 @@
     <div class="container mt-5">
       <h1>Phishing Email and URL Detection</h1>
       <p>
-        Try out our phishing email detection tool.
+        Check whether an email or URL is malicious by using our phishing detection tool. Simply copy and paste the content into the box below, and our system will analyze it to help you stay safe from phishing scams.
       </p>
       <div class="form-group">
         <label for="emailContent"
-          >Copy and paste your email content here:</label
+          >Copy and paste your email content and/or website links here:</label
         >
         <textarea class="form-control" id="emailContents" rows="10" oninput="countWords(this)"></textarea>
 <!-- Word counter -->
