--- a/frontend/caution.html
+++ b/frontend/caution.html
@@ -134,9 +134,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"
+                >Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
