--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -35,7 +35,7 @@
   </nav>
 
   <div class="container mt-5">
-    <h1><b>Report a Phishing Scam</b></h1>
+    <h1>Report a Phishing Scam</h1>
 
     <main>
       <section class="description">
