--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="../../frontend/index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="../../scrollytelly/data.html">Trending Scams</a></li>
-          <li class="nav-item"><a class="nav-link" href="../../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
+          <li class="nav-item"><a class="nav-link" href="../../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Report Phishing Scam</a></li>
           <li class="nav-item"><a class="nav-link" href="../../frontend/Quiz/quiz.html">Test Your Knowledge</a></li>
           <li class="nav-item">
