changed the card name to be consistent with the navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
 					</div>
           <br>
 					<div class="contentBx">
-						<h3>Fraud E-mail Detection</h3>
+						<h3>Detect Phishing Scams</h3>
 					</div>
         </div>
         <a href="../fraud_detection/backend/email_detection.html"> Find Out How to Spot Email Fraud </a>
