--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -120,7 +120,7 @@
     </div> -->
 
     <div class="container mt-5">
-      <div id="predictionResultWrapper" class="p-4"  style="margin-top: 60px;"> <!-- Add a wrapper with padding -->
+      <div id="predictionResultWrapper" class="p-4"  style="margin-top: 100px; margin-bottom: 60px;"> <!-- Add a wrapper with padding -->
         <h1 id="probability" style="font-size: 4rem;"></h1> <!-- Probability -->
         <div id="result" class="mt-3" style="font-size: 1.5rem; font-weight: bold; color: #444;"></div> <!-- Prediction result -->
       </div>
