--- a/frontend/clonePhishing.html
+++ b/frontend/clonePhishing.html
@@ -62,7 +62,7 @@
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
+                    <a class="nav-link active" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
               </div>
