--- a/frontend/popupPhishing.html
+++ b/frontend/popupPhishing.html
@@ -62,7 +62,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                     <a class="nav-link" href="businessEmailCompromisePhishing.html">Scam Overview</a>
                   </li>
                 </ul>
