--- a/frontend/voicePhishing.html
+++ b/frontend/voicePhishing.html
@@ -128,7 +128,7 @@
               <div>
                 <h5>Quick Links</h5>
                 <ul class="list-unstyled">
-                  <li style="padding: 50px;" class="d-inline"><a href="#">Home</a></li>
+                  <li style="padding: 50px;" class="d-inline"><a href="./index.html">Home</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="../scrollytelly/data.html">Trending Scams</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="../fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
                   <li style="padding: 50px;" class="d-inline"><a href="scamReport/index.html">Report Phishing Scam</a></li>
