deployment fixes part 2

--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -47,7 +47,7 @@
       </section>
 
       <!-- Form starts here -->
-      <form id="scamReportForm" method="POST" action="http://127.0.0.1:8000/data/api/submit_report">
+      <form id="scamReportForm" method="POST" action="https://www.seniorsafe.info/apif/data/api/submit_report">
         <div class="form-group">
           <label for="phishingUrl"><b>Please type or paste the suspected phishing scam or URL:</b></label>
           <textarea id="phishingUrl" name="phishingUrl" class="form-control" rows="9" oninput="countWords(this)"></textarea>
