--- a/frontend/404.html
+++ b/frontend/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page Not Found - Senior Safe</title>
-    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="https://www.seniorsafe.info/css/styles.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -30,14 +30,14 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        font-size: 1.5rem; /* Increase content section size */
+        font-size: 1.5rem; 
         padding: 20px;
       }
 
       .funny-message {
-        font-size: 2rem; /* Larger font for the funny message */
+        font-size: 2rem; 
         font-weight: bold;
-        color: #007bff; /* Accent color for the message */
+        color: #007bff; 
       }
 
       footer {
@@ -46,23 +46,23 @@
         position: sticky;
         width: 100%;
         bottom: 0;
-        font-size: 0.875rem; /* Shrink the font size */
+        font-size: 0.875rem; 
       }
 
       footer h5 {
-        font-size: 1rem; /* Smaller header size */
+        font-size: 1rem; 
       }
 
       footer p, footer a {
-        margin: 0; /* Remove extra margin to save space */
+        margin: 0; 
       }
 
       footer .col-md-4 {
-        padding: 5px; /* Reduce padding inside the columns */
+        padding: 5px; 
       }
 
       hr {
-        margin: 10px 0; /* Reduce space above and below the divider */
+        margin: 10px 0; 
       }
     </style>
   </head>
@@ -72,7 +72,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="resources/logof.jpg" alt="Senior Safe Logo" class="logo" />Senior Safe
+          <img src="https://www.seniorsafe.info/resources/logof.jpg" alt="Senior Safe Logo" class="logo" />Senior Safe
         </a>
         <button
           class="navbar-toggler"
@@ -88,30 +88,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../scrollytelly/data.html">Trending Scams</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Fraud Email Detection</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Quiz/quiz.html">Test Your Knowledge</a>
+              <a class="nav-link" href="https://www.seniorsafe.info/Quiz/quiz.html">Test Your Knowledge</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Discover
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="businessEmailCompromisePhishing.html">Business Email Compromise Phishing</a>
-                <a class="dropdown-item" href="clonePhishing.html">Clone Phishing</a>
-                <a class="dropdown-item" href="popupPhishing.html">Pop-up Phishing</a>
-                <a class="dropdown-item" href="searchEnginePhishing.html">Search Engine Phishing</a>
-                <a class="dropdown-item" href="smishingPhishing.html">Smishing</a>
-                <a class="dropdown-item" href="spearPhishing.html">Spear Phishing</a>
-                <a class="dropdown-item" href="voicePhishing.html">Voice Phishing</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.seniorsafe.info/businessEmailCompromisePhishing.html">Scam Overview</a>
             </li>
           </ul>
         </div>
@@ -123,33 +112,22 @@
       <h1 class="display-1">404</h1>
       <h2>Oops! Page Not Found</h2>
       <p class="funny-message">It's not a scam, you've just landed on the wrong page.</p>
-      <a href="index.html" class="btn btn-primary">Go Back to Home</a>
+      <a href="https://www.seniorsafe.info/index.html" class="btn btn-primary">Go Back to Home</a>
     </div>
 
     <!-- Footer -->
+
     <footer class="footer bg-light text-center">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>Contact Us</h5>
-            <p>Email: <a href="mailto:info@seniorsafe.com">info@seniorsafe.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-          </div>
-          <div class="col-md-4">
-            <h5>Follow Us</h5>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-          <div class="col-md-4">
+          <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="../scrollytelly/data.html">Trending Scams</a></li>
-              <li><a href="../fraud_detection/backend/email_detection.html">Fraud Email Detection</a></li>
-              <li><a href="./Quiz/quiz.html">Test Your Knowledge</a></li>
-            </ul>
-          </div>
+              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/index.html">Home</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/scrollytelly/data.html">Trending Scams</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/fraud_detection/backend/email_detection.html">Detect Phishing Scams</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/scamReport/index.html">Report Phishing Scam</a></li>
+              <li style="padding: 50px;" class="d-inline"><a href="https://www.seniorsafe.info/Quiz/quiz.html">Test Your Knowledge</a></li>
+            </ul>      
         </div>
         <hr />
         <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
