--- a/frontend/caution.html
+++ b/frontend/caution.html
@@ -33,7 +33,7 @@
       }
 
       h1 {
-        color: #007bff; /* Blue theme color */
+       
         font-size: 2.5rem;
         margin-bottom: 20px;
       }
@@ -66,8 +66,8 @@
       }
 
       .quiz-button {
-        background-color: #007bff; /* Blue theme color */
-        color: #fff;
+        background-color: #2d65f2e5; /* Blue theme color */
+        color: #e0e1dd;
         padding: 12px 20px;
         border: none;
         border-radius: 5px;
@@ -77,7 +77,9 @@
       }
 
       .quiz-button:hover {
-        background-color: #0056b3; /* Darker blue for hover effect */
+        color: #e0e1dd;
+        text-decoration: none;
+        background-color: #1F3C88; /* Darker blue for hover effect */
       }
 
       footer {
@@ -189,7 +191,7 @@
         Want to test how prepared you are to avoid falling for these scams? Take our online quiz to see how well you can protect yourself.
       </p>
 
-      <a href="Quiz/quiz.html" class="quiz-button">Test Your Preparedness</a>
+      <a href="Quiz/quiz.html" class="quiz-button">Test Your Knowledge</a>
     </div>
 
     <!-- Footer -->
@@ -209,8 +211,5 @@
         <p class="text-muted">© 2024 SeniorSafe. All Rights Reserved.</p>
       </div>
     </footer>
-    <a href="javascript:void(0);" class="down-arrow" onclick="scrollDown();">
-      <i class="fas fa-chevron-down"></i>
-    </a>
   </body>
 </html>
