--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
 				<div class="content">
 					<div class="imgBx">
             <!-- Ref: https://www.freepik.com/free-vector/steal-data-concept_8268968.htm#query=clone%20phishing&position=7&from_view=keyword&track=ais_hybrid&uuid=b10037ea-8885-479f-98ec-de3c56467716 -->
-						<img src="./assets/BECSmall.jpg">
+						<img src="./assets/becsmall.jpg">
 					</div>
           <br>
 					<div class="contentBx">
