Added email type in the front type using big font, remove the greeting words from input

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -74,10 +74,10 @@
     </nav>
 
     <div class="container mt-5">
-      <h1>Phishing Email and URL Detection</h1>
+      <h1>Phishing Email and website link Detection</h1>
       <br>
       <p>
-        Check whether an email or URL is malicious by using our phishing detection tool. Simply copy and paste the content into the box below, and our system will analyze it to help you stay safe from phishing scams.
+        Check whether an email or website link is malicious by using our phishing detection tool. Simply copy and paste the content into the box below, and our system will analyze it to help you stay safe from phishing scams.
       </p>
       <div class="form-group">
         <label for="emailContent"
