Change the color of word counter if it exceeds the word limit

--- a/fraud_detection/backend/email_detection.html
+++ b/fraud_detection/backend/email_detection.html
@@ -94,6 +94,12 @@
     const wordCount = text === "" ? 0 : text.split(/\s+/).length;
     const wordLimit = 500;
     document.getElementById("wordCounter").textContent = `${wordCount}/${wordLimit} words`;
+
+    if (wordCount > wordLimit) {
+      document.getElementById("wordCounter").style.color = 'red';  // Change to red
+    } else {
+      document.getElementById("wordCounter").style.color = '#6c757d';  // Default color
+    }
   }
 </script>
 
