--- a/frontend/businessEmailCompromisePhishing.html
+++ b/frontend/businessEmailCompromisePhishing.html
@@ -85,14 +85,20 @@
             <section class="scam-introduction-section">
                 <h1>Business Email Compromise Phishing</h1>
                 <p>
-                  Business Email Compromise (BEC) is a form of cybercrime in which scammers use email to deceive individuals into transferring funds or revealing confidential company information. The perpetrator impersonates a trusted figure, requesting payment for a fraudulent invoice or seeking sensitive data that can be exploited for further scams.</p>
+                  Business Email Compromise (BEC) is a form of cybercrime in which scammers use email to 
+                  deceive individuals into transferring funds or revealing confidential company information. 
+                  The perpetrator impersonates a trusted figure, requesting payment for a fraudulent invoice or 
+                  seeking sensitive data that can be exploited for further scams.</p>
             </section>
 
             <section class="scam-real-life-examples-section">
                 <div class="content">
-                    <h2>Real-Life Examples</h2>
+                    <h2>Real-Life Example</h2>
                     <p>
-                      Even smaller charities are at risk of Business Email Compromise (BEC). For instance, Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and altered the wire transfer instructions to redirect funds for their own benefit.</p>
+                      Even smaller charities are at risk of Business Email Compromise (BEC). For instance, 
+                      Treasure Island, a homeless charity, lost $625,000 to a BEC scam when hackers impersonated 
+                      Executive Director Sherry Williams. They manipulated the details on a legitimate invoice and 
+                      altered the wire transfer instructions to redirect funds for their own benefit.</p>
                 </div>
                 <div class="image-container">
                     <!-- Image Reference: https://www.mailguard.com.au/blog/whaling-ceo-fraud-business-email-compromise-targeted-spear-phishing-attacks-continue-to-trouble-businesses -->
