hot fix: input validation for Phone call and unspecified. User story direction/navigation at bottom of scrollytelly. deleted redundant text in scrollytelly.

--- a/frontend/scamReport/index.html
+++ b/frontend/scamReport/index.html
@@ -91,10 +91,10 @@
             <option value="Internet">Internet</option>
             <option value="Mail">Mail</option>
             <option value="Mobile apps">Mobile apps</option>
-            <option value="Phone Call">Phone Call</option>
+            <option value="Phone call">Phone call</option>
             <option value="Social media">Social media</option>
             <option value="Text message">Text message</option>
-            <option value="Unspecified">Unspecified</option>
+            <option value="unspecified">unspecified</option>
           </select>
         </div>
 
