--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -65,8 +65,7 @@
                     increasing awareness, enhancing digital literacy, and implementing
                     stronger safeguards, we can help protect our elderly from falling victim
                     to these ruthless crimes.
-                    Discover how scams are increasingly targeting Australians aged 65 and
-                    over.
+                    <br></br>
                     Scroll to Start
                 </p>
             </div>
@@ -86,10 +85,7 @@
                         devise new tactics to exploit the vulnerabilities of older
                         Australians, preying on their trust and often limited familiarity
                         with digital technologies.
-                        <br /><br />
-                        The escalating trend in scam reports underscores the urgent need for
-                        heightened awareness, education, and protective measures to
-                        safeguard our senior population from these evolving threats.
+
                     </section>
                     <section class="step">
                         <div class="title">Rising Scam Incidents</div>
@@ -155,11 +151,7 @@
                         As awareness about scams grows, so too does the number of reported
                         incidents. The data likely represents just the tip of the iceberg,
                         as many seniors may not report scams due to shame, embarrassment, or
-                        simply not realizing they've been scammed. 
-                        <br></br>
-                        If you have recently encountered a scam, 
-                        please submit a <a href="../frontend/scamReport/index.html">report</a> with us
-                        and join the fight against scammers. 
+                        simply not realising they've been scammed.
                     </section>
                 </div>
                 <div id="vis">
@@ -168,9 +160,14 @@
             </div>
         </div>
     </main>
+    <div class="container stepbottom">
+      If you're uncertain about the authenticity of a message you've received, use our <a href="../fraud_detection/backend/email_detection.html">Scam Detection Tool</a> to verify it.
+      If you've recently fallen victim to a scam or come across a suspicious activity, please <a href="../frontend/scamReport/index.html">submit a report</a> and help us in the fight against scammers.
+    <br></br>
+    </div>
 
     <footer class="footer bg-light text-center">
-      <div class="container">
+      <div class="container" style>
           <div>
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
