--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -124,11 +124,12 @@
                     </section>
                     <section class="step">
                         <div class="title">Gender Differences in Scam Victimisation</div>
-                        When it comes to targeted scams, gender plays a role in the
-                        experience of senior Australians. Men, in particular, have been
-                        found to be targeted more significantly in certain types of scams,
-                        highlighting a need for awareness campaigns that address the
-                        specific risks faced by each gender.
+                        When it comes to targeted scams, gender can influence the experience 
+                        of senior Australians. While men may be reporting certain types of scams 
+                        more frequently, it’s important to consider that women may either report 
+                        less or be more adept at avoiding scams altogether. This highlights the need 
+                        for awareness campaigns tailored to the unique risks and behaviors associated 
+                        with each gender.
                     </section>
                     <section class="step">
                         <div class="title">High Financial Impact of Scams</div>
