fixed redirect links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -177,7 +177,8 @@
 
   <!-- Check out Section -->
   <section class="what-to-do-section text-center">
-    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank">Visit Scam Watch, Australia's first line of defence against phishing scams.</a></h3>
+    <h3><a class="check-out-link" href="https://www.scamwatch.gov.au/" target="_blank" rel="noopener noreferrer" onclick="alert('You are being redirected to https://www.scamwatch.gov.au, Australia\'s first line of defence against phishing scams.');">Visit Scam Watch, Australia's first line of defence against phishing scams.</a>
+    </h3>
   </section>
 
   <!-- Footer -->
