--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -59,12 +59,14 @@
     <main>
         <section class="landing-section2 text-center">
             <div class="container">
-                <h1 class="display-4">How are Senior Australians being targeted by Scammers?</h1>
-                <p class="lead">
-                    The rise in scams targeting senior Australians is a call to action. By
-                    increasing awareness, enhancing digital literacy, and implementing
-                    stronger safeguards, we can help protect our elderly from falling victim
-                    to these ruthless crimes.
+                <h1 class="display-4">How are senior Australians being targeted by scammers?</h1>
+                <p class="lead"> 
+                    This report integrates data from the <a href="https://www.scamwatch.gov.au/research-and-resources/scam-statistics" target="_blank" rel="noopener noreferrer" onclick="alert('You are being redirected to the https://www.scamwatch.gov.au/research-and-resources/scam-statistics');">Australian Government</a>
+                    and community-submitted <a href="../frontend/scamReport/index.html">reports</a>. 
+                      The graphs provide key insights into who is targeted by scams, where these scams occur, and the 
+                      financial losses experienced by victims. By raising awareness, improving digital literacy, and 
+                      strengthening protective measures, we can better safeguard our elderly from falling prey to 
+                      these malicious schemes.
                     <br></br>
                     Scroll to Start
                 </p>
@@ -76,15 +78,13 @@
                 <div id="sections">
                     <section class="step">
                         <div class="title">Scam Trends Among Senior Australians</div>
-                        From January 2020 to June 2024, over 120,000 scams targeting senior
-                        Australians have been reported.
-                        <br /><br />
-                        During this period, the frequency of reported scams has increased
-                        significantly year over year, reflecting the growing sophistication
-                        and adaptability of scammers. These malicious actors continually
-                        devise new tactics to exploit the vulnerabilities of older
-                        Australians, preying on their trust and often limited familiarity
-                        with digital technologies.
+                        Between January 2020 and June 2024, approximately 120,000 scams 
+                        targeting senior Australians were reported. Over this period, the 
+                        number of reported scams has risen significantly each year, highlighting 
+                        the increasing sophistication and adaptability of scammers. 
+                        Scammers continuously develop new strategies to exploit 
+                        the vulnerabilities of senior Australians, often taking advantage of their 
+                        trust and limited familiarity with digital technologies.
 
                     </section>
                     <section class="step">
