scroll to start arrow, lines between text

--- a/scrollytelly/data.html
+++ b/scrollytelly/data.html
@@ -14,6 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+    
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
@@ -61,14 +63,14 @@
             <div class="container">
                 <h1 class="display-4">How are senior Australians being targeted by scammers?</h1>
                 <p class="lead"> 
-                    This report integrates data from the <a href="https://www.scamwatch.gov.au/research-and-resources/scam-statistics" target="_blank" rel="noopener noreferrer" onclick="alert('You are being redirected to the https://www.scamwatch.gov.au/research-and-resources/scam-statistics');">Australian Government</a>
-                    and community-submitted <a href="../frontend/scamReport/index.html">reports</a>. 
-                      The graphs provide key insights into who is targeted by scams, where these scams occur, and the 
-                      financial losses experienced by victims. By raising awareness, improving digital literacy, and 
-                      strengthening protective measures, we can better safeguard our elderly from falling prey to 
-                      these malicious schemes.
+                  This report integrates <a href="https://www.scamwatch.gov.au/research-and-resources/scam-statistics" target="_blank" rel="noopener noreferrer" onclick="alert('You are being redirected to the https://www.scamwatch.gov.au/research-and-resources/scam-statistics');">Australian Government</a>
+                    data and community-submitted <a href="../frontend/scamReport/index.html">reports</a>, 
+                    offering insights into scam targets, locations, and financial losses. By raising awareness 
+                    and improving digital literacy, we aim to better protect seniors from falling victim to scams.
                     <br></br>
                     Scroll to Start
+                    <!-- Arrow indicators -->
+                     <i class="fas fa-chevron-down arrow-indicator"></i>
                 </p>
             </div>
         </section>
